[package]
name = "d"
version = "0.2.2"
authors = ["lightning1141 <lightning1141@gmail.com>"]
edition = "2021"
description = "A Tiny Dictionary"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
directories = "4.0"
regex = "1.7"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
rodio = { version = "0.16", default-features = false, features = [
    "symphonia-mp3",
] }
tokio = { version = "1.24", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "time",
] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 4
strip = "debuginfo"
# split-debuginfo = 'packed'    # https://doc.rust-lang.org/rustc/codegen-options/index.html#split-debuginfo
